--- a/layouts/partials/head-additions.html
+++ b/layouts/partials/head-additions.html
@@ -1,9 +1,4 @@
 <script src="https://cdn.amplitude.com/libs/analytics-browser-2.11.1-min.js.gz"></script>
 <script src="https://cdn.amplitude.com/libs/plugin-session-replay-browser-1.8.0-min.js.gz"></script>
 <script>
-    window.amplitude.add(window.sessionReplay.plugin({ sampleRate: 1 }));
-    window.amplitude.init("4c918bb4a3e5038fa2059a6dad177fc2", {
-        serverZone: "EU",
-        autocapture: { elementInteractions: true },
-    });
-</script>
+    window.amplitude.add(window.sessionReplay.plugin({ sampleRate: 1 })); window.amplitude.init('a1e44abf4c4038b33ffed178376d009c', { "autocapture": { "elementInteractions": true } });</script>
